fix tvcoverage, display grid dependent on support col gap, fix pagenav on photos

--- a/css/mymedley.css
+++ b/css/mymedley.css
@@ -1,5 +1,8 @@
 @import "flex_mod.css";
 @import "fullflex_mod.css";
+.js body {
+    background-color: white;
+}
 .no-cssgrid #tvcoverage {
 	/*if not grid, block, NOT flex*/
 	display: block;
@@ -10,49 +13,8 @@
 	-webkit-flex: 2 1 1%;
 	flex: 2 1 1%;
 }
-
 article:last-child img {
-    max-width: 13em;
-}
-#tvcoverage p {
-	-ms-grid-row: 1;
-	-ms-grid-row-span: 1;
-	grid-row: 1/3;
-	-ms-grid-column: 1;
-	-ms-grid-column-span: 1;
-	grid-column: 1/4;
-	min-width: 0;
-}
-#tvcoverage p:last-of-type {
-	-ms-grid-row: 2;
-	-ms-grid-row-span: 1;
-	grid-row: 3/4;
-}
-#tvcoverage section>*:first-child {
-	-ms-grid-row: 2;
-	-ms-grid-row-span: 1;
-	grid-row: 1/6;
-	grid-column: 4/6;
-}
-#tvcoverage #naledi>a {
-	-ms-grid-column: 1;
-	-ms-grid-column-span: 2;
-	grid-column: 1/6;
-	-ms-grid-row: 1;
-	grid-row: 1/1;
-}
-#tvcoverage #naledi p:last-of-type {
-	-ms-grid-row: 2;
-	-ms-grid-row-span: 1;
-	grid-row: 2/4;
-}
-#naledi>*:nth-child(2) {
-	-ms-grid-column: 2;
-	-ms-grid-column-span: 1;
-	-ms-grid-row: 2;
-	-ms-grid-row-span: 1;
-	grid-row: 2/3;
-	grid-column: 4/6;
+	max-width: 13em;
 }
 /*
 .flexbox #presslinks section, .flexboxtweener #presslinks section, .flexboxlegacy #presslinks section, .flexbox article:last-child section, .flexboxtweener article:last-child section, .flexboxlegacy article:last-child section {
@@ -61,7 +23,7 @@ article:last-child img {
 }
 */
 
-@supports((-moz-column-gap: 20px) or (column-gap: 20px)) {
+@supports (column-gap: 20px) {
 	.override #tvcoverage {
 		display: -ms-grid;
 		display: grid;
@@ -70,28 +32,55 @@ article:last-child img {
 		display: -ms-grid;
 		display: grid;
 	}
+	#tvcoverage p {
+		-ms-grid-row: 1;
+		-ms-grid-row-span: 1;
+		grid-row: 1/3;
+		-ms-grid-column: 1;
+		-ms-grid-column-span: 1;
+		grid-column: 1/4;
+		min-width: 0;
+	}
+	#tvcoverage p:last-of-type {
+		-ms-grid-row: 2;
+		-ms-grid-row-span: 1;
+		grid-row: 3/4;
+	}
+	#tvcoverage section>*:first-child {
+		-ms-grid-row: 2;
+		-ms-grid-row-span: 1;
+		grid-row: 1/6;
+		grid-column: 4/6;
+	}
+	#tvcoverage #naledi>a {
+		-ms-grid-column: 1;
+		-ms-grid-column-span: 2;
+		grid-column: 1/6;
+		-ms-grid-row: 1;
+		grid-row: 1/1;
+	}
+	#tvcoverage #naledi p:last-of-type {
+		-ms-grid-row: 2;
+		-ms-grid-row-span: 1;
+		grid-row: 2/4;
+	}
+	#naledi>*:nth-child(2) {
+		-ms-grid-column: 2;
+		-ms-grid-column-span: 1;
+		-ms-grid-row: 2;
+		-ms-grid-row-span: 1;
+		grid-row: 2/3;
+		grid-column: 4/6;
+	}
 }
-.cssgrid #tvcoverage {
-	display: -ms-grid;
-	display: grid;
-}
-.cssgrid #tvcoverage section {
-	display: -ms-grid;
-	display: grid;
-}
+/*gap*/
+
 .no-cssgrid #tvcoverage {
 	display: block;
 }
 no-cssgrid #tvcoverage section {
 	display: block;
 }
-/* @media only screen and (max-width: 410px), (not(-ms-high-contrast: active)), (not (-ms-high-contrast: none)) {
-  		article h3, article:first-child label {
-  		line-height: 1;
-  	}
-  }
-*/
-
 @media screen and (max-width: 667px) {
 	article {
 		display: block;
@@ -110,13 +99,12 @@ no-cssgrid #tvcoverage section {
 	.flexbox #presslinks section, .flexboxtweener #presslinks section, .flexboxlegacy #presslinks section, .flexbox article:last-child section, .flexboxtweener article:last-child section, .flexboxlegacy article:last-child section {
 		margin-left: 0;
 	}
-   .touchevents #wrap article:last-child nav,  .touchevents #wrap #presslinks nav{
-    margin: 1em;
-    }
-    .touchevents #wrap article:last-child img {
-         margin: 1em;
-    }
-
+	.touchevents #wrap article:last-child nav, .touchevents #wrap #presslinks nav {
+		margin: 1em;
+	}
+	.touchevents #wrap article:last-child img {
+		margin: 1em;
+	}
 }
 @media screen and (min-width: 668px) {
 	.flexwrap #tvcoverage h3 {
